# shadow-plugin-extras

./: CMakeLists.txt  README.md  README.template.md
browser/: CMakeLists.txt  README.md  browser-main.c  browser-plugin.c  browser.c  browser.h  example.xml  html.c  html.h  url.c  url.h  wiki.xml
browser/wiki/en.wikipedia.org/: index.html  robots.txt
browser/wiki/www.wikipedia.org/: index.html
browser2/: CMakeLists.txt  README.md  browser2.cc  browser2.hpp  shd-browser2-plugin.cc
browser2/examples/htmlroot/: 1.js  index.html
browser2/examples/no-tor/: run.sh  shadow.config.xml
browser2/examples/with-tor/: run.sh
browser2/examples/with-tor/initdata/: bridgeauthgen.torrc
browser2/examples/with-tor/initdata/4uthority1/keys/: authority_signing_key  secret_id_key
browser2/examples/with-tor/initdata/4uthority2/keys/: authority_certificate  secret_onion_key
browser2/examples/with-tor/initdata/4uthority3/: fingerprint
browser2/examples/with-tor/initdata/4uthority3/keys/: authority_identity_key  authority_signing_key  secret_onion_key
browser2/examples/with-tor/initdata/4uthoritybridge1/: fingerprint
browser2/examples/with-tor/initdata/4uthoritybridge1/keys/: authority_identity_key  authority_signing_key
browser2/examples/with-tor/torrc_files/: authority.torrc  bridge.torrc  exitguard.torrc  torperf.torrc
echo/: CMakeLists.txt  README.md  echo-main.c  echo-pipe.c  echo-plugin.c  echo-tcp.c  echo-udp.c  echo.h  example.xml
filetransfer/: CMakeLists.txt  README.md  cdf.c  example.xml  filegetter.c  filegetter.h  fileserver.c  fileserver.h  filetransfer-main.c  filetransfer-plugin.c  filetransfer.c  filetransfer.h  service-filegetter.c  service-filegetter.h
hello/: CMakeLists.txt  README.md  hello.c
mixminion/: CMakeLists.txt
mixminion/src/: mixminion-main.c  mixminion-runner.py  mixminion.c  mixminion.h  mixminion.py
pcap_replay/: CMakeLists.txt  README.md  example.tor.xml  pcap_replay-main.c  pcap_replay.c  pcap_replay.h
pcap_replay/shadowtor-pcap-replay-example/: shadow.example.config.xml  shadowtor.example.config.xml  test.pcap
pcap_replay/shadowtor-pcap-replay-example/conf/: tgen.client.graphml.xml  tgen.hiddenserver.graphml.xml  tgen.server.graphml.xml  tgen.torclient.graphml.xml  tgen.torhiddenclient.graphml.xml  tor.authority.torrc  tor.common.torrc
pcap_replay/shadowtor-pcap-replay-example/shadow.data.template/hosts/torflowauthority/: v3bw
ping/: CMakeLists.txt  ping-client.c  ping-client.h  ping-main.c  ping-plugin.c  ping-server.c  ping-server.h  ping-service.c  ping-service.h  ping.c  ping.h
python/: CMakeLists.txt  README.md  example.xml  tests.py
python/python3/: CMakeLists.txt
python/python3/src/: python-interpreter.c
python/src/: python-global-lock.c  python-global-lock.h  python-interposer.c  python-interpreter.c  python-logging.c  python-main.c  python-plugin.c  python-plugin.h  python-preload.c  python.c  python3-interpreter.c
python/tests/: echo.py
smtp/: CMakeLists.txt  README.md  utility
smtp/server/: CMakeLists.txt  handler.cc  handler.hpp  shd-smtpserver-main.cc  smtpserver.cc  smtpserver.hpp
smtp/src/: smtp-main.c  smtp-runner.py  smtp.c  smtp.h
src/: CMakeLists.txt  README.template.md
src/hello/: CMakeLists.txt  README.md  example.xml  hello-main.c  hello-plugin.c  hello.c  hello.h
tor-echo/: .README.md.swp  CMakeLists.txt  README.md  example.xml  tor-echo-client.c  tor-echo-server.c
tor-echo/conf/: helloworld.func  tor.authority.torrc  tor.common.torrc  tor.exit.torrc  tor.relay.torrc
torcontrol/: CMakeLists.txt  torcontrol-circuitbuild.c  torcontrol-circuitbuild.h  torcontrol-logger.c  torcontrol-logger.h  torcontrol-main.c  torcontrol-pinger.c  torcontrol-pinger.h  torcontrol-plugin.c  torcontrol.c  torcontrol.h
torrent/: CMakeLists.txt  README.md  example.xml  torrent-authority.c  torrent-authority.h  torrent-client.c  torrent-client.h  torrent-main.c  torrent-plugin.c  torrent-server.c  torrent-server.h  torrent-service.c  torrent-service.h  torrent.c  torrent.h
utility/: common.cc  common.hpp  connection.cc  connection.hpp  myassert.h  request.cc  request.hpp  shd-html.cc  shd-url.h
web/: CMakeLists.txt  README.md
web/browser/: CMakeLists.txt  README.md  browser.cc  browser.hpp  shd-browser-main.cc  shd-browser-plugin.cc
web/browser/examples/: page-spec.txt
web/browser/examples/htmlroot/: 2.js
web/browser/examples/no-tor/: shadow.config.xml
web/browser/examples/with-tor/: shadow.config.xml
web/browser/examples/with-tor/initdata/4uthority1/: fingerprint
web/browser/examples/with-tor/initdata/4uthority1/keys/: authority_certificate  authority_identity_key  secret_onion_key
web/browser/examples/with-tor/initdata/4uthority2/: fingerprint
web/browser/examples/with-tor/initdata/4uthority2/keys/: authority_identity_key  authority_signing_key  secret_id_key
web/browser/examples/with-tor/initdata/4uthority3/keys/: authority_certificate  secret_id_key
web/browser/examples/with-tor/initdata/4uthoritybridge1/keys/: authority_certificate  secret_id_key  secret_onion_key
web/browser/examples/with-tor/torrc_files/: bridgeauthority.torrc  client.torrc  middle.torrc
web/cmake/: FindSPDYLAY.cmake
web/utility/: connection.cc  connection.hpp  connection_manager.cc  connection_manager.hpp  http_parse.c  http_parse.h  myevent.cc  myevent.hpp  request.hpp  shd-html.hpp  shd-url.c
web/webserver/: CMakeLists.txt  README.md  handler.hpp  webserver.cc  webserver.hpp
webserver/: CMakeLists.txt  handler.cc  shd-webserver-main.cc  shd-webserver-plugin.cc
